--- a/features/themes/onms-default-theme/src/main/java/VAADIN/themes/opennms/styles.css
+++ b/features/themes/onms-default-theme/src/main/java/VAADIN/themes/opennms/styles.css
@@ -317,3 +317,13 @@
 {
   background-image: url(../../../images/bgCleared.png);
 }
+.v-window-outerheader {
+    background-attachment: scroll;
+    background-clip: border-box;
+    background-image: none;
+    background-origin: padding-box;
+    background-position: 0 0;
+    background-repeat: repeat;
+    background-size: auto auto;
+    background-color: #536f85;
+}
